# hspell

./: INSTALL  LICENSE  Makefile  Makefile.in  README  TODO  WHATSNEW  binarize-desc.pl  biza-nouns  biza-verbs  biza-verbs.hif  configure  configure.in  dict_radix.c  extrawords  extrawords.hif  gimatria.c  gzbuffered.h  hash.h  hspell.1  hspell.3  hspell.c  hspell.h  hspell.pl  hspell.spec  install.js.pre  libhspell.c  likelyerrors  linginfo.c  milot  mk_he_affix.c  multispell  pack-desc.pl  pmerge  specfilter.c  spellinghints  stats  tclHash.c  tclHash.h  wolig.pl  (+3 more)
c/: Makefile  PrefixBits.pl  README  binarize-desc.pl  corlist.c  corlist.h  dict_radix.c  dict_radix.h  find_sizes.c  genprefixes.pl  gimatria.c  gimatria.h  hash.h  hspell.3  hspell.c  hspell.h  libhspell.c  linginfo.c  linginfo.h  pmerge
doc/: niqqudless.odt
homepage/: .htaccess  Hspell-HOWTO.html  Makefile  UPDATE  about.html  docs.html  download.html  hspell-0.1.tar.gz.sig  hspell-0.2.tar.gz.sig  hspell-0.3.tar.gz.sig  hspell-0.4.tar.gz.sig  hspell-0.5.tar.gz.sig  hspell-0.6.tar.gz.sig  hspell-0.7.tar.gz.sig  hspell-0.8.tar.gz.sig  hspell-0.9.tar.gz.sig  hspell-1.0.tar.gz.sig  hspell-1.1.tar.gz.sig  hspell.1.html  hspell.3.html  hspell.css  index.html  oldnews.html  vimhspell.vim
homepage/announcements/: 0.1.html  0.1r.html  0.2.html  0.2r.html  0.3.html  0.3r.html  0.4.html  0.4r.html  0.5.html  0.5r.html  0.6.html  0.6r.html  0.7.html  0.7r.html  0.8.html  0.8r.html  0.9.html  1.0.html  index.html
homepage/doc/: go-linux-03.html  ibm-04.html  lecture.css
homepage/doc/haifux-03/: lecture.html
homepage/media/maariv-2003-11-27/: index.html
homepage/media/nana-2003-12-7/: nana.html
homepage/media/nana-2003-12-7/nana_files/: 1092699030Top.js  1505288071TopLeft.js  Input.js  Nana.js  Styles_1_10.css  banners.js  dotomiManager.js  getDotomiCookie.html
homepage/media/pcplus72003/: article.php?id=119  article_id119.php  index.html  style.css
homepage/media/ynet-2003-9-17/: 1,2506,L-2759476,00.html
homepage/media/ynet-2003-9-17/1,2506,L-2759476,00_files/: engine.html  ie.css  net.css
homepage/media/ynet-2006-3-6/: 0,7340,L-3225750,00.html
homepage/media/ynet-2006-3-6/0,7340,L-3225750,00_files/: 0  01028500.htm  011100L-253700.htm  011399L-2537-100.htm  1  16_ver_elect  3  6  7  COMPUT_logo  RM15717216_a  babylon  blog  cornergrayrb  cornergraytr  date_igul  engine  eznet  ie.css  k_s_com  magdelet4  navcorner  radware_logo  realcommerce84x13  search  v5  yi_logo15x13
homepage/media/ynet-2007-8-3/: 0,7340,L-3433113,00.html
homepage/media/ynet-2007-8-3/0,7340,L-3433113,00_files/: 0.swf  collarity.css  collarity_no_personal.css  hebrew.css  ie.css  widgets.css
misc/: doubleaffixcompress  ff2-install.js.pre  ff2-install.rdf.pre  install.rdf.pre
